--- a/index.html
+++ b/index.html
@@ -701,6 +701,11 @@
 							><i class="bi bi-bricks">Crear Noticia</i>
 						</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="./noticiacreada.html" target="_blank"
+							><i class="bi bi-bricks">Noticias Creadas</i>
+						</a>
+					</li>
 				</nav>
 			</div>
 			<div class="copyright mt-4">
