--- a/conocenos.html
+++ b/conocenos.html
@@ -82,9 +82,9 @@
 								<li class="nav-item">
 									<a class="nav-link" href="./conocenos.html">CONOCENOS</a>
 								</li>
-								<li class="nav-item">
+								<!-- <li class="nav-item">
 									<a class="nav-link" href="./conocenos.html">CONOCENOS</a>
-								</li>
+								</li> -->
 								<!-- <li class="nav-item">
 									<a class="nav-link" href="./login.html">LOGIN</a>
 								</li>
