--- a/noticiacreada.html
+++ b/noticiacreada.html
@@ -75,10 +75,10 @@
 									<a class="nav-link" href="./index.html">INICIO</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="#">ACTUALIDAD</a>
+									<a class="nav-link" href="./actualidad.html">ACTUALIDAD</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="#">DEPORTES</a>
+									<a class="nav-link" href="./deportes.html">DEPORTES</a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link" href="./conocenos.html">CONOCENOS</a>
