--- a/noticiacreada.html
+++ b/noticiacreada.html
@@ -342,7 +342,7 @@
 									<div class="card pb-5">
 										<img
 											class="card-img link-img rounded"
-											src="assets/images/carlla-willstons.jpg"
+											src="src/images/brian.jpg"
 											alt=""
 										/>
 									</div>
@@ -354,7 +354,19 @@
 									<div class="card pb-5">
 										<img
 											class="card-img link-img rounded"
-											src="assets/images/carlla-willstons.jpg"
+											src="src/images/marc.jpg"
+											alt=""
+										/>
+									</div>
+									<h3 class="text-center mt-3 mb-0">Marc Rubio</h3>
+									<p class="text-center mt-1 third-clr">Periodista</p>
+								</div>
+
+								<div>
+									<div class="card pb-5">
+										<img
+											class="card-img link-img rounded"
+											src="src/images/brian.jpg"
 											alt=""
 										/>
 									</div>
@@ -366,23 +378,11 @@
 									<div class="card pb-5">
 										<img
 											class="card-img link-img rounded"
-											src="assets/images/carlla-willstons.jpg"
+											src="src/images/marc.jpg"
 											alt=""
 										/>
 									</div>
-									<h3 class="text-center mt-3 mb-0">Brian Cebrian</h3>
-									<p class="text-center mt-1 third-clr">Periodista</p>
-								</div>
-
-								<div>
-									<div class="card pb-5">
-										<img
-											class="card-img link-img rounded"
-											src="assets/images/carlla-willstons.jpg"
-											alt=""
-										/>
-									</div>
-									<h3 class="text-center mt-3 mb-0">Brian Cebrian</h3>
+									<h3 class="text-center mt-3 mb-0">Marc Rubio</h3>
 									<p class="text-center mt-1 third-clr">Periodista</p>
 								</div>
 							</div>
