--- a/index.html
+++ b/index.html
@@ -706,6 +706,24 @@
 							><i class="bi bi-bricks">Noticias Creadas</i>
 						</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="./noticiacreada.html?id=8" target="_blank"
+							><i class="bi bi-bricks"> 1</i></a
+						>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="./noticiacreada.html?id=9" target="_blank"
+							><i class="bi bi-bricks"> 2</i></a
+						>
+					</li>
+					<li class="nav-item">
+						<a
+							class="nav-link"
+							href="./noticiacreada.html?id=10"
+							target="_blank"
+							><i class="bi bi-bricks"> 3</i></a
+						>
+					</li>
 				</nav>
 			</div>
 			<div class="copyright mt-4">
